feat(sparql): support rs:boolean, canonical value format, and preserve ORDER BY sequence